Closed Bug 339886 Opened 19 years ago Closed 19 years ago

Coverity param leaked at NSS_CMSCipherContext_StartEncrypt(nss/lib/smime/cmscipher.c)

Categories

(NSS :: Libraries, defect, P2)

3.11.2
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.2

People

(Reporter: alvolkov.bgs, Assigned: alvolkov.bgs)

Details

(Keywords: coverity, Whiteboard: [CID 540 904])

Attachments

(1 file)

the function leaks memory allocated by PORT_ZAlloc (line 213) in case when second PORT_ZAlloc call fails(line 227)
Coverity ID: 904
Priority: -- → P2
Summary: param leak at NSS_CMSCipherContext_StartEncrypt(nss/lib/smime/cmscipher.c) → param leaked at NSS_CMSCipherContext_StartEncrypt(nss/lib/smime/cmscipher.c)
Additional mem leak: memory allocated by PK11_GenerateNewParam. Coverity ID: 540
Attached patch free "param"Splinter Review
Attachment #224134 - Flags: review?(nelson)
Comment on attachment 224134 [details] [diff] [review] free "param" r=nelson
Attachment #224134 - Flags: review?(nelson) → review+
Alexei, please check in the reviewed patch.
Target Milestone: --- → 3.11.2
tip: /cvsroot/mozilla/security/nss/lib/smime/cmscipher.c,v <-- cmscipher.c new revision: 1.9; previous revision: 1.8 3.11 branch: /cvsroot/mozilla/security/nss/lib/smime/cmscipher.c,v <-- cmscipher.c new revision: 1.8.2.1; previous revision: 1.8
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [CID 540 904]
Summary: param leaked at NSS_CMSCipherContext_StartEncrypt(nss/lib/smime/cmscipher.c) → Coverity param leaked at NSS_CMSCipherContext_StartEncrypt(nss/lib/smime/cmscipher.c)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: